--- a/src/app/byu-header/byu-header.component.scss
+++ b/src/app/byu-header/byu-header.component.scss
@@ -1,16 +1,91 @@
 header {
     display: flex;
     align-items: center;
-    padding: 10px 20px;
+    padding: 10px 20px 20px;
+    gap: 20px;
     background-color:  #002E5D;
     color:  #e4edf7;
-  
+    font-family: 'Public Sans', 'Noto Sans', 'Open Sans', Helvetica, Arial, sans-serif;
+
     .logo img {
       height: 40px;
+      align-items:center;
+      justify-content: center;
     }
-    .text-container {
+    // TODO: making columns!
+    .Header-titles {
+      position: relative; // 👈 required for the ::before element
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding-left: 30px;
+      margin-top: 10px;
+      
+      &::before {
+        content: " ";
+        display: block;
+        position: absolute;
+        background: #BDD6E6;
+        width: 1px;
+        height: 84%;
+        right: auto;
+        left: 0;
+        top: 13%; 
+    }
+    
+    }
+    .breadcrumbs {
+      display: flex;
+      flex-direction:row;
+      align-items: center;
+      gap: 10px;  
+      font-weight: bold;
+  
+    }
+    .breadcrumbs a {
+      position: relative; //bug fixed add this to render the line
+      color: #a6abb1;  
+      text-decoration: none;
+      font-size: 1.3rem;
+    }
+
+    .breadcrumbs a:not(:first-child) {
+      padding-left: 10px;  //just dont change the padding of the first element
+    }
+
+    .breadcrumbs a:visited {
+      color: #a6abb1;         
+    }
+
+    .breadcrumbs a:hover {
+      color: #ffffff; 
+    }
+    .breadcrumbs a:not(:first-child)::before {
+      content: " ";
+      display: block;
+      position: absolute;
+      background: #BDD6E6;
+      width: 1px;
+      height: 84%;
+      right: auto;
+      left: 0;
+      top: 13%;   
+    }
+    .title-containers {
       display: flex;
       flex-direction: column;
       text-align: left;
+
+      .byu-title{
+        font-size: 2rem;
+        margin-bottom: 1px;
+        font-weight: 500;
+      }
+
+      .byu-subtitle{
+        font-size: 1.3rem;
+        font-weight: 300;
+      }
+
     }
 }
