--- a/src/app/byu-header/byu-header.component.scss
+++ b/src/app/byu-header/byu-header.component.scss
@@ -86,6 +86,14 @@ header {
         font-size: 1.3rem;
         font-weight: 300;
       }
+    }   
 
+    .signin-icon {
+      display: flex;
+      margin-left: auto;
+      align-items: center;
+      height: 40px;
+      width: 40px;
     }
+    
 }
