Added Custom Sidebar with some functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <byu-header
     [config]="headerConfig"
 ></byu-header>
+<app-linker-sidebar    
+    [config] = "sidebarConfig"
+></app-linker-sidebar>
 <byu-footer>
 </byu-footer>
