Added Footer and Basic Sidebar

--- a/src/app/byu-footer/byu-footer.component.html
+++ b/src/app/byu-footer/byu-footer.component.html
@@ -1,3 +1,10 @@
-<p>byu-footer works!</p>
-
+<footer>
+    <p class="title"><a href="https://www.byu.edu/">BRIGHAM YOUNG UNIVERSITY</a></p>
+    <p>Provo, UT 84602, USA | © {{ currentYear }} All rights reserved.</p>
+    <p>
+      <a href="https://privacy.byu.edu/privacy-notice">Privacy Notice</a> |
+      <a href="https://privacy.byu.edu/cookie-prefs">Cookie Preferences</a>
+    </p>
+  </footer>
+    
 
