--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,1 @@
-<byu-header
-    [config]="headerConfig"
-></byu-header>
-<app-linker-sidebar    
-    [config] = "sidebarConfig"
-></app-linker-sidebar>
-<byu-footer>
-</byu-footer>
+<router-outlet></router-outlet>
