--- a/src/app/byu-header/byu-header.component.html
+++ b/src/app/byu-header/byu-header.component.html
@@ -13,17 +13,14 @@
             <h2 class="byu-subtitle">{{config()?.subtitle?.text}}</h2>
         </div>
     </div>
-        <svg class="signin-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 72 72">
-          <defs>
-            <style>
-              .am { stroke-miterlimit: 10; }
-              .am, .an { fill: none; stroke: #FFF; stroke-width: 2.5px; }
-            </style>
-          </defs>
-          <path class="am" d="M19.89,54.62v-2.55c0-5.01,4.06-9.07,9.07-9.07h14.08c5.01,0,9.07,4.06,9.07,9.07v2.54"/>
-          <circle class="am" cx="36" cy="29.44" r="7.9"/>
-          <circle class="an" cx="36" cy="36" r="24.5"/>
-        </svg>
+    <div class="signin">
+      <svg class="signin-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+        <path fill="currentcolor" d="M50 95c-26 0-34-18-34-18 3-12 8-18 17-18 5 5 10 7 17 7s12-2 17-7c9 0 14 6 17 18 0 0-7 18-34 18z"></path>
+        <circle cx="50" cy="50" r="45" fill="none" stroke="currentcolor" stroke-width="10"></circle>
+        <circle fill="currentcolor" cx="50" cy="40" r="20"></circle>
+      </svg>
+        <a class="signin-link" href="/">Sign In</a>
+    </div>
 </header>
 <!-- 
 input() is used to bind input properties with signals.
