--- a/src/app/byu-header/byu-header.component.html
+++ b/src/app/byu-header/byu-header.component.html
@@ -1,25 +1,34 @@
 <header>
-    <div class = "logo">
-        <img class="styled-image" src="/BYU_monogram_white@2x.png" alt="Image Description">
+    <div class = "header-top" >
+        <div class = "logo">
+            <img class="styled-image" src="/BYU_monogram_white@2x.png" alt="Image Description">
+        </div>
+        <div class="Header-titles"> 
+            <div class="breadcrumbs">
+                @for (breadcrumb of config()?.breadcrumbs; track breadcrumb.text){
+                    <a routerLink="{{breadcrumb.path}}" >{{breadcrumb.text}}</a>
+                }
+            </div>
+            <div class ="title-containers">
+                <h1 class="byu-title">{{config()?.title?.text}}</h1>
+                <h2 class="byu-subtitle">{{config()?.subtitle?.text}}</h2>
+            </div>
+        </div>
+        <div class="signin">
+          <svg class="signin-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+            <path fill="currentcolor" d="M50 95c-26 0-34-18-34-18 3-12 8-18 17-18 5 5 10 7 17 7s12-2 17-7c9 0 14 6 17 18 0 0-7 18-34 18z"></path>
+            <circle cx="50" cy="50" r="45" fill="none" stroke="currentcolor" stroke-width="10"></circle>
+            <circle fill="currentcolor" cx="50" cy="40" r="20"></circle>
+          </svg>
+            <a class="signin-link" href="/">Sign In</a>
+        </div>
     </div>
-    <div class="Header-titles"> 
-        <div class="breadcrumbs">
-            @for (breadcrumb of config()?.breadcrumbs; track breadcrumb.text){
-                <a routerLink="{{breadcrumb.path}}" >{{breadcrumb.text}}</a>
+    <div class="header-bottom">
+        <nav class="header-nav">
+            @for (menuItem of config()?.menu; track menuItem.text){
+                <!-- FIXME: Add routerLink to the anchor tag -->
             }
-        </div>
-        <div class ="title-containers">
-            <h1 class="byu-title">{{config()?.title?.text}}</h1>
-            <h2 class="byu-subtitle">{{config()?.subtitle?.text}}</h2>
-        </div>
-    </div>
-    <div class="signin">
-      <svg class="signin-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-        <path fill="currentcolor" d="M50 95c-26 0-34-18-34-18 3-12 8-18 17-18 5 5 10 7 17 7s12-2 17-7c9 0 14 6 17 18 0 0-7 18-34 18z"></path>
-        <circle cx="50" cy="50" r="45" fill="none" stroke="currentcolor" stroke-width="10"></circle>
-        <circle fill="currentcolor" cx="50" cy="40" r="20"></circle>
-      </svg>
-        <a class="signin-link" href="/">Sign In</a>
+        </nav>
     </div>
 </header>
 <!-- 
