working on header

--- a/src/app/byu-header/byu-header.component.html
+++ b/src/app/byu-header/byu-header.component.html
@@ -28,10 +28,12 @@
             @for (menuItem of config()?.menu; track menuItem.text){
                 <!-- FIXME: Add routerLink to the anchor tag -->
                 @if (isHeaderLink(menuItem)) {
-                 <div>
-                    <!--getting an error because it is a union type which means a headerMenu can either be a HeaderLink or a group wiwth  items | -->
-                    <a routerLink="{{menuItem.path}}">{{menuItem.text}}</a>
-                 </div>
+                 <li class = "header-nav-item">
+                    <div class = "header-nav-item-content" tabindex ='0' aria-haspopup="true" aria-expanded="true">
+                        <!--getting an error because it is a union type which means a headerMenu can either be a HeaderLink or a group wiwth  items | -->
+                        <a routerLink="{{menuItem.path}}">{{menuItem.text}}</a>
+                    </div>
+                 </li>
                 }
             }
         </nav>
