--- a/src/app/byu-header/byu-header.component.scss
+++ b/src/app/byu-header/byu-header.component.scss
@@ -121,7 +121,7 @@ header {
       .header-nav {
         display: flex;
         flex-direction:row;
-        align-items: center;
+        align-content: center;
         gap: 30px;  
         font-weight: bold;
         padding: 10px 20px;
