--- a/src/app/linker-sidebar/linker-sidebar.component.scss
+++ b/src/app/linker-sidebar/linker-sidebar.component.scss
@@ -62,28 +62,22 @@ mat-sidenav-content {
 }
 
 .search-field {
-  width: 90%;
-  margin: 0.25rem auto 0;
-  height: 80%;
-
-  ::ng-deep .mat-form-field-wrapper {
-    padding-bottom: 0;
-  }
-
-  ::ng-deep .mat-form-field-infix {
-    padding: 0.2rem 0;
-    min-height: 0;
-  }
-
-  ::ng-deep input.mat-input-element {
-    font-size: 0.8rem;
-    padding: 0.2rem 0;
-  }
-
-  ::ng-deep .mat-form-field-label {
-    font-size: 0.75rem;
-  }
+  width: 92%;             // slightly wider and closer to left
+  margin: 0.1rem 0 0 8px; // top margin, no right/bottom, slight left indent
+  height: 60px;           // tighter vertical space
 }
 
+.nav-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 16px;
+  margin-bottom: 6px;
+}
 
+.nav-title {
+  font-size: 2rem;
+  font-weight: 500;
+  color: darkslategray;
+}
 
