Removed footer, improved sidebar layout

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,9 +1,9 @@
 <byu-header
-    [config]="headerConfig"
+    [config] = "headerConfig"
 ></byu-header>
 <main>
     <app-linker-sidebar
-    [config] = "sidebarConfig"></app-linker-sidebar>
+        [config] = "sidebarConfig"
+    ></app-linker-sidebar>
     <router-outlet></router-outlet>
 </main>
-<byu-footer></byu-footer>
