--- a/src/app/page4/page4.component.html
+++ b/src/app/page4/page4.component.html
@@ -1,3 +1,3 @@
 <p>page4 works!</p>
-<a routerLink="/three">Page three</a>
-<a routerLink="/one">Page one</a>
+<a routerLink="/three">Page three </a>
+<a routerLink="/">Home</a>
