save current work

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,4 +1,5 @@
-
-<p>Home works!</p>
-<a routerLink="/two">Page two</a>
-
+<!-- home-page.component.html -->
+<main>
+    <p>Home works!</p>
+    <a routerLink="/two">Page two</a>
+</main>
