--- a/src/app/linker-sidebar/linker-sidebar.component.html
+++ b/src/app/linker-sidebar/linker-sidebar.component.html
@@ -1,3 +1,4 @@
+<!-- linker-sidebar.component.html -->
 <mat-sidenav-container>
   <mat-sidenav #sidenav mode="side" class="grey-container" opened>
     <div class="sidebar-content">
