--- a/src/app/byu-header/byu-header.component.scss
+++ b/src/app/byu-header/byu-header.component.scss
@@ -117,6 +117,7 @@ header {
     }
     .header-bottom{
       color: #ffffff;
+      box-shadow: 10px 5px 5px 0px rgba(204, 197, 197, 0.75); 
 
       .header-nav {
         display: flex;
@@ -133,7 +134,7 @@ header {
       }
 
       .header-nav-item:hover {
-        box-shadow: inset 0 -5px 0 0 #002E5D;;        /* cyan underline appears on hover */
+        box-shadow: inset 0 -5px 0 0 #002E5D;;        
         background-color: #f1f1f1;
       }
 
