drop down menu update

--- a/src/app/byu-header/byu-header.component.html
+++ b/src/app/byu-header/byu-header.component.html
@@ -42,11 +42,13 @@
                         <div class="header-nav-item-content">
                             {{ menuItem.text }}
                         </div>
+                        <ul class = "dropdown-menu">
                         @for(dropItem of menuItem.items; track dropItem.text){
                             <li class="dropdown-item">
                                 <a routerLink="{{ dropItem.path }}">{{ dropItem.text }}</a>
                             </li>
                         }
+                        </ul>
                     </li>
                 }
             }
