--- a/src/app/linker-sidebar/linker-sidebar.component.scss
+++ b/src/app/linker-sidebar/linker-sidebar.component.scss
@@ -1,11 +1,11 @@
 //Linker-sidebar.component.scss
 mat-sidenav-container {
-  height: 100vh;
+  height: 100%;
 }
 
 mat-sidenav {
   width: 240px;
-  transition: width 0.3s ease;
+  transition: width 0.3s ease;     
 }
 
 mat-sidenav-content {
@@ -20,13 +20,16 @@ mat-sidenav-content {
 }
 
 .sidebar-content {
-  padding: 10px 0;
+  justify-content: space-between;  // pushes the chevron button to the bottom
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: auto;
 }
 
 .chevron_left {
-  margin-bottom: 0rem;
-  margin-top: 0rem;
-  margin-right: 4px;
+  margin: 0 4px 4px 0;
   align-self: flex-end;
 }
 
@@ -67,7 +70,7 @@ mat-sidenav-content {
 
 .search-field {
   width: 92%;             // slightly wider and closer to left
-  margin: 0.1rem 0 0; // top margin, no right/bottom
+  margin: 1rem 0 0; // top margin, no right/bottom
   height: 60px;           // tighter vertical space
   align-items: center;
 
