--- a/src/app/linker-sidebar/linker-sidebar.component.html
+++ b/src/app/linker-sidebar/linker-sidebar.component.html
@@ -26,9 +26,12 @@
         }
       </div>
       <!-- Hamburger at bottom -->
-      <button mat-icon-button (click)="sidenav.toggle()" class="chevron_left">
-        <mat-icon>chevron_left</mat-icon>
-      </button>
+      <div class="chevron-wrapper chevron-left-wrapper">
+        <button mat-icon-button (click)="sidenav.toggle()" class="chevron_left">
+          <mat-icon>chevron_left</mat-icon>
+        </button>
+      </div>
+      
     </div>
   </mat-sidenav>
 
@@ -49,9 +52,12 @@
           </button>
         }
       }
-      <button mat-icon-button (click)="sidenav.toggle()">
-        <mat-icon>chevron_right</mat-icon>
-      </button>
+      <div class="chevron-wrapper chevron-right-wrapper">
+        <button mat-icon-button (click)="sidenav.toggle()">
+          <mat-icon>chevron_right</mat-icon>
+        </button>
+      </div>
+      
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
