printing the byu drop down menu

--- a/src/app/byu-header/byu-header.component.html
+++ b/src/app/byu-header/byu-header.component.html
@@ -31,20 +31,18 @@
                  <li class = "header-nav-item">
                     <!--getting an error because it is a union type which means a headerMenu can either be a HeaderLink or a group wiwth  items | -->
                     <a class="header-nav-item-content"
-                    routerLink="{{menuItem.path}}"
-                    tabindex="0"
-                    aria-haspopup="true"
-                    aria-expanded="true">{{menuItem.text}}</a>
+                    routerLink="{{menuItem.path}}" >{{menuItem.text}}</a>
                  </li>
                  <!--if there is a drop down menu-->
                 } @else {
-                    <li class="header-nav-item dropdown" tabindex="0">
-                        <div class="header-nav-item-content">
+                    <li class="header-nav-item-dropdown" (click)="toggleDropdown(menuItem.text)">
+                        <div class="header-nav-item-content" >
                             {{ menuItem.text }}
                         </div>
-                        <ul class = "dropdown-menu">
+
+                        <ul class = "dropdown-item-menu" *ngIf="openDropdownText === menuItem.text"> 
                         @for(dropItem of menuItem.items; track dropItem.text){
-                            <li class="dropdown-item">
+                            <li class="dropdown-item-content">
                                 <a routerLink="{{ dropItem.path }}">{{ dropItem.text }}</a>
                             </li>
                         }
