increased spacing on icons

--- a/src/app/linker-sidebar/linker-sidebar.component.scss
+++ b/src/app/linker-sidebar/linker-sidebar.component.scss
@@ -39,6 +39,7 @@ mat-sidenav-content {
 .collapsed-icon-menu {
   align-items: center;
   padding-top: 1rem;
+  gap: 0.75rem;
 }
 
 .collapsed-icon-group {
